# mp_data_nba_test

./: Dockerfile  README.md  prediction.py  pyproject.toml
code/: ExplorationModelisation.ipynb  inference.py  test.py
data/: features_names.yaml  test_data.json
models/: model.pkl
outputs/: ExplorationModelisation.html  test.html
